--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "homepage": "https://github.com/rafaellaurindo/laravel-telegram-logging",
   "require": {
     "php": ">=7.2",
-    "laravel/framework": "7.0 || ^8.0 || ^9.0 || ^10.0",
-    "monolog/monolog": "2.*"
+    "laravel/framework": "^10.0",
+    "monolog/monolog": "3.*"
   },
   "license": "MIT",
   "authors": [
